<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adv4You</string>

    <string name="type_consistent">Последовательно-постоянный</string>
    <string name="type_impulsive">Импульсивный</string>
    <string name="type_seasonal">Сезонный</string>
    <string name="type_flight">Флайтовый</string>

    <string name="reviews">Отзывы</string>
    <string name="place_an_order">Оформить заказ</string>

    <string name="hint_full_name">ФИО</string>
    <string name="hint_phone">Контактный телефон</string>
    <string name="hint_money">Ваш бюджет (в рублях)</string>
    <string name="type">Тип продвижения:</string>
    <string name="make_an_order">Оформить заказ</string>

    <string name="add_review">Оставить отзыв</string>

    <string name="send_review">Отправить отзыв</string>
    <string name="hint_name">Введите своё имя</string>
    <string name="hint_review">Напишите отзыв</string>

    <string name="white_them">Белая тема</string>
    <string name="black_them">Чёрная тема</string>

    <string name="type_consistent_description_part1">
        Последовательное постоянное размещение (Continuity):
        равномерное и непрерывное размещение рекламных материалов бренда в течение всего года, с постоянным медиа весом.</string>

    <string name="type_consistent_description_part2">
        Данная стратегия требует высокого уровня инвестиций, бюджета. Используется на высоко-конкурентном рынке в качестве стратегии доминирования.
        Позволяет максимально нарастить и удержать знание о бренде.
        Стать TOP of mind в своем сегменте. Должна быть поддержана высоким уровнем доступности и дистрибьюции рекламируемого товара или услуги.
        \n
        \nСтратегия рекомендуется также для товаров и услуг, имеющих частый цикл покупки и низкую вовлеченность в покупку (т.е. высокую вероятность к переключению).
        Больше всего подходит для массовых товаров и услуг с широкой потребительской базой (с низким ограничением по возрасту, доходу, полу и т.д.).</string>

    <string name="type_impulsive_description_part1">
        Рекламная стратегия импульсного продвижения (Burst): периодическое (часто интенсивное) размещение рекламных материалов через равные временные интервалы не зависимо от времени года.
        Данная стратегия является модификацией последовательного постоянного размещения.
        Используется также для создания эффекта доминирования, но требует более низких инвестиций.</string>

    <string name="type_impulsive_description_part2">
        Изначально в качестве стратегии доминирования рекомендуется выбирать рекламную стратегию именно импульсного размещения с небольшими временными интервалами отсутствия активности.
        Такая стратегия позволяет оптимизировать инвестиции в рекламу.
        \n
        \nВременные интервалы в стратегии должны быть выбраны таким образом, чтобы сохранить накопленный уровень знания о товаре.
        Оптимальный временной интервал – максимальный интервал между первой и второй покупкой при ежедневном использовании товара или услуги.
        В случае ужесточения конкуренции данная стратегия постепенно переходит в стратегию последовательного постоянного размещения.</string>

    <string name="type_seasonal_description_part1">
         Рекламная стратегия сезонного продвижения (Seasonal) означает интенсивное размещение рекламных материалов во время пиковых сезонных продаж.</string>

    <string name="type_seasonal_description_part2" formatted="true">
        При сезонном размещении важно правильно определить начало рекламной кампании,
        чтобы в момент всплеска продаж и возникновения намерения к покупке у потребителя уже сформировалось знание о товаре или услуге.
        \n
        \nНачало рекламной кампании должно начинаться до всплеска продаж и соответствовать двум критериям:
        \n
        \n
        1. Рекламная кампания от начала до всплеска продаж должна обеспечивать быстрый рост знания о товаре и услуги.
        Чтобы в момент, когда потребитель пойдет в магазин за товаром, рекламируемый бренд был у него минимум в ТОП-3 марок, которые он рассматривает к приобретению.
        \n
        2. Рекламная кампания не должна начинаться с того момента, когда потребитель начинает задумываться о совершении покупки
        (данную информацию можно узнать на основе потребительских исследований).
        \n
        \n
        Оптимальная стратегия интенсивности при сезонном размещении: начинать с высоких весов,
        снижая интенсивность размещения к концу кампании; начинать с низких весов,
        постепенно наращивая интенсивность к началу пика продаж и снижая интенсивность размещения к концу кампании.</string>

    <string name="type_flight_description_part1">
         Рекламная стратегия рывка или флайтовое продвижение товара (Flight) –
        периодичное размещение рекламных материалов с мощным началом кампании (высокий вес и частота показа) с последующим снижением рекламной активности.</string>

    <string name="type_flight_description_part2">
        Данная стратегия является наиболее часто используемой, так как подходит для всех кампаний, не являющихся лидерами рынка.
        Также флайтовая стратегия рекомендуется для запуска новинок уже известного бренда; для кампаний, только что входящих на рынок; для репозиционирования бренда.
        \n
        \nПри флайтовой стратегии можно достигнуть интенсивности размещения на уровне крупных игроков, что позволит новой кампании или новому продукту громко заявить о себе,
        сформировать необходимый минимальный уровень знания о товаре для последующего развития продаж.</string>


</resources>