<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MakingAnOrder">

    <EditText
        android:id="@+id/ed_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/hint_full_name"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_full_name" />

    <EditText
        android:id="@+id/ed_money"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/hint_money"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_phone" />

    <EditText
        android:id="@+id/type_of_extension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/making_an_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:minWidth="200dp"
        android:text="@string/make_an_order"
        android:textAllCaps="false"
        android:textColor="#FFEAEAEA"
        app:backgroundTint="#4E596C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_of_extension" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/type"
        android:textColor="#696E7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_money" />

</androidx.constraintlayout.widget.ConstraintLayout>