<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.types.Impulsive">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/reviews_button"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="80dp"
                app:backgroundTint="#A0A8C1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_seasonal_part2" />

            <Button
                android:id="@+id/place_an_order"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                app:backgroundTint="#A0A8C1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_seasonal_part2" />

            <TextView
                android:id="@+id/place_an_order_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="10dp"
                android:text="@string/place_an_order"
                android:textColor="#696E7E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/place_an_order" />

            <TextView
                android:id="@+id/reviews_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="8dp"
                android:text="@string/reviews"
                android:textColor="#696E7E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_button" />

            <TextView
                android:id="@+id/description_seasonal_part2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/type_impulsive_description_part2"
                android:textColor="#696E7E"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/des_seas" />

            <TextView
                android:id="@+id/description_seasonal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/type_impulsive_description_part1"
                android:textColor="#696E7E"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/des_seas"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_seasonal"
                app:srcCompat="@mipmap/des_im" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>